# OPEN-IPTV

./: .gitignore  LICENSE  OPEN-IPTV.spec  README.md  app.py  catalog.py  config.example.json  config_store.py  conftest.py  epg_doctor.py  epg_guide.py  images.py  iptv_launcher.py  lock.py  make_icon.py  net.py  player.py  pyproject.toml  requirements.txt  theme.py  widgets.py
.github/workflows/: ci.yml  release.yml
tests/: test_catalog.py  test_epg_guide.py  test_player.py
views/: __init__.py  channels.py  favourites.py  filters.py  groups.py  search.py  settings.py
